# netbox-kea

./: .flake8  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
netbox_kea/: __init__.py  constants.py  filtersets.py  forms.py  graphql.py  kea.py  models.py  navigation.py  tables.py  urls.py  utilities.py  views.py
netbox_kea/api/: serializers.py  urls.py  views.py
netbox_kea/migrations/: 0001_initial.py  0002_alter_server_options_server_dhcp4_server_dhcp6.py  0003_remove_server_dhcp4_remove_server_dhcp6_and_more.py
netbox_kea/templates/netbox_kea/: exception_htmx.html  leases_bulk_delete.html  server.html  server_base.html  server_dhcp_leases.html  server_dhcp_leases_htmx.html  server_dhcp_subnets.html  server_leases_delete.html  server_status.html  service_disabled.html
netbox_kea/templates/netbox_kea/inc/: configure_table.html  server_dhcp_leases_paginator.html
tests/: conftest.py  constants.py  kea.py  test_netbox_kea_api_server.py  test_setup.sh  test_ui.py
tests/docker/: Dockerfile-kea  docker-compose.override.yml  docker-compose.yml  htpasswd
tests/docker/kea_configs/: kea-ctrl-agent.conf  kea-dhcp4.conf  kea-dhcp6.conf
tests/files/: docker-compose.override.yml  nginx.conf
tests/files/configuration/: plugins.py
tests/files/kea_configs/: kea-dhcp4.conf  kea-dhcp6.conf
